app/assets/stylesheets/all/style.css.scss
/* ... */
.front-container {
  z-index: 4;
  position: absolute;
}

/************************************/
/**************Overlay***************/
/************************************/
.docOverlay, #location-popup {
  height: 100%;
  width: 100%;
  overflow: hidden;

  #loc {
    margin-left: 5px
  }

  .location p {
    position: relative;
    display: inline;
    height: 30px;
    line-height: 30px;
    vertical-align: middle;
    margin: 0;
  }

  h3 {
    margin-left: 5px;
  }

  #map {
    float: right;
    display: inline;
    width: 60%;
    height: 80%;
  }

  #location-map {
    float: left;
    display: inline;
    width: 700px;
    height: 500px;
  }

  #docHeader {
    height: 40px;
    width: 100%;
  }

  #fallbacks {
    width: 100%;
    padding: 10px;
    margin: 0;

    ul {
      padding: 0;
      margin: 0;
      display: inline;
    }

    li {
      display: inline;
      list-style-type: circle;
      padding-left: 10px;
      padding-right: 10px;

      &:hover {
        text-decoration: underline;
        cursor: pointer;
      }
    }
  }

  #docTitle {
    font-size: 1.8em;
    font-weight: bold;
    display: inline;
  }
  #docList {
    float: left;
    display: inline;
    width: 40%;
    height: 85%;
    overflow: scroll;
    overflow-x: hidden;

    /* the label for the input behind the doc list */
    label {
      display: inline-block;
      background-color: $light-grey;
      padding: 4px 11px;
      width: 100%;
      position: relative;
      min-height: 100px;

      .doc{
        float: right;
        width: 90%;
        display: inline;
      }

      .doc-number{
        position: relative;
        display: inline;
        border-right: black 1px solid;
        height: 100%;
        width: 8%;
        float: left;
        line-height: 100px;
        vertical-align: middle;
        font-size: 20px;
      }

      &:hover {
        background-color: $dark-grey !important;
        color: white !important;
      }
    }


    /* the input element behind the doctor list */
    input[type="radio"] {
      display: none;

      &:checked + label {
        background-color: $grey;
      }

      .active:after {
        content: url(arrow.png);
        position: absolute;
        top: 50%;
        left: 100%;
        margin: 10px;
      }
    }
  }
}

#center-button {
  float: right;
  display: inline;
  @include clickable;
}

#location-input {
  height: 25px;
}

/************************************/
/***********Bread Crumbs*************/
/************************************/

#breadcrumb {
  position: fixed;
  top: 50px;
  height: 30px;
  width: 100%;
  background: $light-grey;
  left: 0;
  border-bottom: 1px solid $grey;

  a:visited {
    text-decoration: none;
    color: black;
  }

  ul {
    margin: 0px !important;
  }

  li {
    display: inline;
    border-right: none;
    background: url(/assets/separator.gif) no-repeat right center;
    padding-right: 15px;
    padding-left: 10px;
    line-height: 30px;
    vertical-align: middle;

    &.last {
      background: none;
    }

    &:hover {
      text-decoration: underline;
      cursor: pointer;
    }
  }
}


/************************************/
/***********Scrollpane*************/
/************************************/


.jspContainer
{
  overflow: hidden;
  position: relative;

  .jspPane
  {
    position: absolute;
  }
  }

  .jspCap
  {
    display: none;
  }

  .jspTrack
  {
    background: $light-grey;
    border-left: 1px solid $grey;
    position: relative;
    border-top-right-radius: 7px;
  }

  .jspDrag
  {
    background: #888;
    border: 1px solid #555;
    position: relative;
    top: 0;
    left: 0;
    cursor: pointer;
    @include border-radius($border-radius);
  }

  .jspVerticalBar
  {
    position: absolute;
    top: 0;
    right: 0;
    width: 7px;
    height: 85%;

    *{
      margin: 0;
      padding: 0;
    }

    .jspArrow{
      height: 16px;
    }

    .jspArrow:focus
    {
      outline: none;
    }
  }

